# gazebo-interface

./: README.md
gazebo/: __init__.py  example.scenic  model.scenic  simulator.py
gazebo/util/plugins/: CMakeLists.txt  pose_plugin.cc  pose_plugin.hh
gazebo/util/plugins/delete_models/: CMakeLists.txt  delete_models.cc  delete_models.hh
gazebo/util/plugins/delete_models/msgs/: CMakeLists.txt  scenic_delete_models.proto  scenic_delete_models_pb2.py
gazebo/util/plugins/model_stats/: CMakeLists.txt  model_stats.cc  model_stats.hh
gazebo/util/plugins/model_stats/msgs/: CMakeLists.txt
gazebo/util/plugins/pose_plugin/: CMakeLists.txt  pose_plugin.cc  pose_plugin.hh
gazebo/util/plugins/pose_plugin/msgs/: scenic_obj_info.proto  scenic_obj_info_pb2.py
gazebo/util/scripts/: world_setup.py
